profile alignment updated
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4775 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -1149,50 +1149,56 @@ Regarding the rotations, the situation is less homogeneous. Some rotations are v
 One may object that such a direct comparison of shifts as in \Fg{al comp rp all rot} is slightly misleading. Every rotation misalignment induces a shift correction, see \Eq{al sm rotz shr}. This correction is proportional to the distance of the sensor from the origin ($\vec c$). Thus, the correction would be different for different RP approaches (different data sets). From \Tb{al lhc datasets} one can read that the thin-window positions varied approximately from $2.6$ to $8\un{mm}$ for the vertical pots and from $2.3$ to $5.6\un{mm}$ for the horizontal pots. The span was thus of the order of $\De c \approx 4\un{mm}$. From the \Eq{al sm rotz shr} one could expect the rotation-induced shifts to vary by $\De c \De \rh$. Taking $\De\rh \approx 10 \un{mrad}$ (the scale of rotation results in \Fg{al comp det per unit}) yields a variation by about $40\un{\mu m}$. However, the variation is actually much smaller, MC simulations give the order of $5\un{\mu m}$. There are two reasons for this. First, the final constraints have been used. The mix shift and rotation degrees of freedom and make the calculation more complex. And second, the rotations of the top and bottom pots have nearly the same values but opposite signs. This leads to partial cancellations. To summarize, the shifts obtained from different data-takings can be compared with an uncertainty of $5\un{\mu m}$.
 
 
-In this section we have reverified that one can not determine the rotation between the near and far unit with a reasonable precision. Then we have compared alignment results from a number of 2010 LHC runs. We have found the DP shifts very stable -- the change from run to another is of the order of $10\un{\mu m}$. The vertical DP shifts, as corrections to the collimation alignment presented in \Sc{al collim}, have the expected order \Eq{al window to dp uncer}. We have also determined all three DP rotations. Those about $x$ and $y$ axes have shown to be very stable too. However, the rotation about $z$ has presented non-negligible run-to-run variations (standard deviation up to about $0.2\un{mrad}$).
+In this section we have (re)verified that one can not determine the rotation between the near and far unit with a reasonable precision. Then we have compared alignment results from a number of 2010 LHC runs. We have found the DP shifts very stable -- the change from run to another is of the order of $10\un{\mu m}$. The vertical DP shifts, as corrections to the collimation alignment presented in \Sc{al collim}, have the expected order \Eq{al window to dp uncer}. We have also determined all three DP rotations. Those about $x$ and $y$ axes have shown to be very stable too. However, the rotation about $z$ has presented non-negligible run-to-run variations (standard deviation up to about $0.2\un{mrad}$).
 
 
 \section[al prof]{Profile methods}
 
-\TODO{Comment about beam position}
+In \Sc{al} we have shown that the track-based alignment is a very powerful tool, however, there are certain alignment modes that cannot be accessed (see e.g.~\Tb{al sing mode overview}). Regarding transverse shifts, these alignment modes can be described as horizontal ($x$) and vertical ($y$) shifts of the vertical RPs in each station (cf.~the final constraints \Eq{al final constraints}). In this section we will discuss some methods that can determine the misalignment in these modes (an alternative using elastic events will be shown in \Sc{al elast}).
+
+We recall that our goal is the alignment of RP sensors with respect to the beam. One can approach the task from the opposite side and determine the beam position as measured by the RP sensors (that is the beam's position with respect to the RP sensors). The position of the beam can be deduced from measured hit distributions with the aid of some symmetry considerations.
+
+
+\iffalse
 \> beam position is the theoretical hit position of an elastic proton with $\th = 0$ and the mean vertex position.
 \> (in our OfflineSW convention, the beam is at zero)
 \> misalignements $\De q$ and RP positions $q^{\rm RP}$ (in accordance with \Eq{misalignment definition})
 $$q^{\rm RP}(\hbox{actual/misaligned}) = q^{\rm RP}(\hbox{thought/nominal}) + \De q$$
 therefore for hit positions $q$
 $$q(\hbox{reconstructed with thought geometry}) = q(\hbox{real}) - \De q$$
+\fi
 
-Profile methods are those which use symmetries in track and/or angular distributions. The expected symmetries depend on the studied physical processes as well as on the optics. However, the vertical symmetry around the beam can be assumed quite generally. If there was no crossing-angle, the process would have full azimuthal symmetry (about the beam axis). Even if the crossing-angle is non-zero, it is horizontal, thus the up-down symmetry is preserved. On the optics side, most of them are designed with vanishing vertical dispersion $D_y$ \TODO{in practice not true}, therefore the vertical symmetry remains also after the proton transport.
+The expected hit-distribution symmetries depend on the considered physical processes as well as on the optics. However, for the nominal optics, the vertical symmetry around the beam can be assumed quite generally. Was there no crossing-angle, the scattering at the IP would have full azimuthal symmetry (about the beam axis). Even if the crossing-angle is non-zero, it acts in the horizontal plane, thus the up-down symmetry is preserved. On the optics side, most of them are designed with vanishing vertical dispersion $D_y$ (however this will turn out false for the optics from 2010, see e.g.~\Fg{al prof hits}), therefore the vertical symmetry would remain also after the proton transport, that means it would be observable in the hit distribution (see e.g.~\Fg{al prof simu}).
 
-This vertical symmetry can be used even on-line, before data-taking, to symmetrize the position of the vertical RPs around the beam. This would increase the low $|t|$ acceptance.
+\fig{fig/pdf/al_prof_simu.pdf}{al prof simu}{A MC simulation of hit distributions at the RPs of the 56-220-near unit. The green points represent elastic scattering (Elegent, PPP3), blue SD (Pythia) and red DPE (Phojet). All processes simulated at $\sqrt s = 3.5\un{GeV}$ and with nominal optics with $\be^* = 2.5\un{m}$. The black solid lines are the contours of the sensors. The dotted lines represent symmetry axes, the middle black dot marks the position of the beam.}
 
-Profile methods have also offline applications, that is those that can provide alignment corrections for registered data. Let us focus low-$\be$ optics, which was the case for 2010 data-takings. \Fg{al prof simu} shows typical hit distributions (MC simulation) for some important forward-physics processes. Beyond the aforementioned vertical symmetry, one can immediately spot the horizontal symmetry of the green points (elastic scattering). The entire next section will be devoted to the alignment with elastic scattering, but let us comment on how to use this symmetry even without separating a sample of elastic events. The ''hot spot'' close to $x\approx 0$ contains also a contribution from non-elastic processes with low $\xi$ (see for example the red dots -- DPE). Due to the horizontal dispersion, the hits are shifted to the right and the symmetry is broken. This can be well seen \Fg{al prof x dists}: the elastic peak is close to zero, but the non-elastic events form a broad structure shifted towards higher $x$ values. But what is important is that around $x=0$, the distribution is dominated by elastics events and their peak can be well fitted, as illustrated in the figure.
+\Fg{al prof simu} shows typical hit distributions (MC simulation) for several important forward-physics processes. Beyond the aforementioned vertical symmetry, one can immediately spot the horizontal symmetry of the green points (elastic scattering). The entire next section \Sc{al elast} will be devoted to the alignment with elastic scattering events, here let us comment on how to use this symmetry even without selecting a sample of elastic events. The ``hot spot'' close to $x\approx 0\un{mm}$ contains also a contribution from non-elastic processes with low $\xi$ (see for example the red dots -- DPE). Due to the horizontal dispersion, the hits are shifted to the right and the symmetry is broken. This can be well seen in \Fg{al prof x dists}: the elastic peak is narrow and close to zero, but the non-elastic events form a broad structure shifted towards higher $x$ values. But what is important is that around $x=0$, the distribution is dominated by elastics events and their peak can be well fitted, as illustrated in the figure.
 
-\Fg{al prof simu} shows the distributions as expected from simulations, however, in reality they look quite different, see \Fg{al prof hits}. On the first sight, we one can two major differences.
-\bitm
-\itm The \em{tilt of the elastic peak} (around the red line). Our current understanding is a XY coupling, \TODO{because of ...}
-\itm The unexpected distribution of the diffractive hits (around the blue line, mainly for the sector 56). The distribution is tilted and deformed. The slope of the diffractive hits could be explained by the presence of a vertical dispersion \TODO{... more, comment about the shape}.
-\eitm
-
-As a consequence of the elastic peak tilt, the peak in the $x$ distribution widens up, see \Fg{al prof x dists} left, and its center does not correspond to the $x$ position of the beam. To mitigate this problem, one may divide the scatter plot into horizontal slices and build and fit the $x$ distributions for each of them (an example is in \Fg{al prof x dists} right; note the thinner peak). Then, the peak positions then be plotted versus the center of the slice, see an example in \Fg{al prof fits} left. The vertical error bands represent the slice widths, the horizontal are coming from the peak fit uncertainty. The points in green were removed as outliers. The red line represent a common fit through top and bottom pot data and it confirms that the tilt is the same for both RPs. Ideally (were there no errors), the red line would go through the beam position.
-
-In principle, the same slicing method could be applied to the diffractive hits (see \Fg{al prof fits} right), however it is complicated by two facts. First, the profile is non-linear (can be seen by bare eyes in \Fg{al prof hits} right and is manifested by the point fluctuation in \Fg{al prof fits} right). Thus the linear-fit result will be burdened by an important systematic error. Since the diffractive hit distribution is wide and therefore the statistical error of the fit is large as well. This all is made even worse by the second complication: since there is just one horizontal pot, the fit must be extrapolated to the beam position. At the end, the error propagation makes this method uninteresting.
-
-\TODO{broken symmetries - assymetric acceptance, optics deviations, apperture limitations, trigger and detector efficiency bias}
-
-\fig{fig/pdf/al_prof_simu.pdf}{al prof simu}{A Geant4 simulation of hit distributions at the RPs of the 56-220m near unit. The geen points represent elastic scattering (Elegent, PPP3), blue SD (Pythia) and red DPE (Phojet). All processes simulated at $\sqrt s = 3.5\un{GeV}$ and with nominal optics with $\be^* = 2.5\un{m}$. The black solid lines are the contours of the sensors. The dotted lines represent symmetry axes, the middle black dot marks the position of the beam.}
-
-\fig{fig/pdf/al_prof_x_dists.pdf}{al prof x dists}{Horizontal hit distributions in the 56-220-near-top pot (data from 29-30 Oct). Left: all hits, Right: one horizontal slice only. The peak is mostly formed by elastic events, the background is dominated by DPE. The red curve is a Gaussian fit with quadratic background.}
-
-\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions at near stations (scoring planes at $\pm 217\un{m}$). Data from 21 Sep. The far stations look qualitatively the same.
+\fig{fig/pdf/al_prof_hits.pdf}{al prof hits}{Typical hit distributions at the $220\un{m}$ stations (scoring planes at $\pm 217\un{m}$). Data from 21 Sep. The colorful lines represent fits of low-$\xi$ (green) and large-$\xi$ (magenta) hits.
 % analysis with vsym2 geometry
 }
 
-\fig{fig/pdf/al_prof_fits.pdf}{al prof fits}{The results of the sliced fits for the 56-220-near unit and data from 21 Sep. Left: fit of the elastic peaks, Right: fit of the diffractive hit distribution. The fit lines use the same color code as in \Fg{al prof hits}. The green points excluded from the fit.}
+\Fg{al prof simu} shows the hit distributions as expected from simulations, however, the distributions from 2010 data look quite different, see \Fg{al prof hits}. On the first sight, we one can two major differences.
 
-\TODO{With an interesting precision, the alignment can be done in the horizontal direction only.}
+\> The \em{tilt of the elastic peak} (around the green line). Our current understanding is that due to LHC magnet misalignments (mainly rotations) a coupling between the $x$ and $y$ components of the optics, \Eq{ttm lin par}, was created. The net effect is the tilt of the elastic hit axis.
 
-Practically, the profile alignment is used as the step prior to the alignment with elastic tracks. It simplifies the selection of the elastic sample, but the precision is superseded in the next step.
+\> The \em{unexpected distribution of the diffractive hits} (around the magenta line), mainly for the sector 56. The distribution is tilted and deformed. We understand the tilt as an effect of non-zero vertical dispersion $D_y$. The dispersion terms in the proton transport \Eq{ttm lin par} then move diffractive protons along the axis with tilt $D_y/D_x$.
+
+\fig{fig/pdf/al_prof_x_dists.pdf}{al prof x dists}{Horizontal hit distributions in the 56-220-near-top pot (data from 29-30 Oct). Left: all hits, Right: one horizontal slice only. The peaks are mostly formed by elastic events, the background is dominated by DPE. The orange curves are Gaussian fits with a parabolic background.}
+
+As a consequence of the elastic peak tilt, the peaks in the $x$ distributions widen up, see \Fg{al prof x dists} left, and their centers do not correspond to the $x$ position of the beam. To mitigate this problem, one may divide the scatter plot into horizontal slices and fit the $x$ distributions for each of them (an example is in \Fg{al prof x dists} right; note the thinner peak). The results can then be plotted versus the center of the slice, see an example in \Fg{al prof fits} left. The vertical error bands represent the slice widths, the horizontal are coming from the peak fit uncertainty. The points in gray have been removed as outliers. The green line represents a common fit through the top and bottom pot data and it confirms that the tilt is the same for both RPs. Then, the green line shall go through the beam center.
+
+\fig{fig/pdf/al_prof_fits.pdf}{al prof fits}{The results of the sliced fits for the 56-220-near unit and the data from 21 Sep. Left: fit of the elastic peaks, Right: fit of the diffractive hit distribution. The fit lines use the same color code as in \Fg{al prof hits}. The gray points have been excluded from the fit as outliers.}
+
+In principle, the same slicing method could be applied to the diffractive hits (see \Fg{al prof fits} right), however it is complicated by two facts. First, the profile is non-linear. It can be seen already in \Fg{al prof hits} right, if inspected carefully.  Then, it is quantified in \Fg{al prof fits} right. Thus the linear-fit result will be burdened by an important systematic error. Since the diffractive hit distribution is wide and therefore the statistical error of the fit is large as well. This all is made even worse by the second complication: since there is just one horizontal pot, the fit must be extrapolated to the beam position. At the end, the error propagation makes this method uninteresting.
+
+
+%\TODO{broken symmetries - asymmetric acceptance, optics deviations, aperture limitations, trigger and detector efficiency bias}
+
+To conclude, only the low-$\xi$ hit fit can be performed with an interesting precision. Since the elastic peak tilts are below $40\un{mrad}$ (see \Tb{al el yx}) and the residual vertical misalignment is of the order of $100\un{\mu m}$, the fit determines the beam position with an uncertainty below $10\un{\mu m}$.
+
+
+Practically, the profile alignment is used as the step prior to the alignment with elastic tracks. It simplifies the selection of the elastic sample, but the precision is superseded by the elastic alignment.
 
 \section[al elast]{Elastic Alignment}
 
