--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -4,6 +4,8 @@ DPE, SD, MC
 
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
+\fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The workflow of the paper}
+
 \> reference to the paper \bref{totem11}
 \> comment on what I have done (mostly with Simone)
 
