--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -11,6 +11,8 @@ WHAT: The physics programme of the TOTEM experiment includes:
 \> total cross-section measurement and
 \> a study of soft and hard diffraction.
 
+\> define SD and DPE
+
 \TODO{add the phi vs. eta diagram to explain the forwardness?}
 
 HOW (detectors): This challenging program brings special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, TOTEM comprises three subdetectors: the telescopes T1 and T2 to detect products of inelastic collisions and a system of Roman Pots (RP) for surviving proton detection.
