--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -4,21 +4,40 @@ DPE, SD, MC
 
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
-\fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The workflow of the paper}
+This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the LHC. This achievement, published in \bref{totem11}, is a result of efforts of the entire TOTEM collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis.
 
-\> reference to the paper \bref{totem11}
-\> comment on what I have done (mostly with Simone)
+This analysis is based on the data from 29-30 October, when the RPs were approached to $7\si$ from the beam and the LHC was running at the standard 2010 optics with $\be^* = 3.5\un{m}$. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to distort the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The event sample used for the analysis (with horizontal RPs retracted) corresponds to an integrated luminosity of $6.1\un{nb^-1}$.
 
-\> review the conventions
-\>> 45 = left, 56 = right
-\>> the 2 diagonals
+\fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross-section of the elastic scattering.}
 
-\> outline of the paper
+In \Fg{felm scheme} we review the analysis steps, with a brief description below.
 
-\section{Alignment}
-
-\> as described in chapter \Sc{al}
+\> {\bf Alignment}.
+\>> as described in chapter \Sc{al}
 \> $\th_y$ matching between diagonals for the vertical alignment wrt. the beam.
+
+\> {\bf Optics tuning}.
+
+\> {\bf Reconstruction}.
+
+\> {\bf Event selection}.
+
+\> {\bf Final vertical alignment}.
+
+\> {\bf Background subtraction}.
+
+\> {\bf Acceptance correction}.
+
+\> {\bf Unsmearing}.
+
+\> {\bf Normalization}.
+
+\> {\bf Merging diagonals}.
+
+
+
+Before going to details, let us (re)define the terminology used. The sector 45 (56) is called left (right) arm of the TOTEM experiment. The elastic events involve two protons with practically opposite directions (up to beam divergence). Thus from detector point of view, they split into two groups -- with top RPs active in the sector 45 (so called \em{diagonal} 45 top -- 56 bottom) or with top RPs active in the sector 56 (diagonal 45 bottom -- 56 top).
+
 
 \section{Background}
 
